<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Created by Efendi Hariyadi on 29/06/22, 8:56 PM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 28/06/22, 5:03 PM
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>
    <string name="app_name">NearMe</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">drawer close</string>
    <string name="action_notify">notification</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_1">Posts</string>
    <string name="tab_text_2">Favourites</string>
    <string name="comments">Comments</string>
    <string name="featured_posts">Featured Posts</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="comment">Comment</string>
    <string name="title">Title</string>
    <string name="post_by">Post By @</string>
    <string name="direct_message">Direct Message</string>
    <string name="green_general_queried_in_your_area">Green - General Queried in Your Area</string>
    <string name="favours_like_finding_a_lost_pet_buy_or_sell_something">Orange - Favours like finding a lost pet, Buy or Sell something</string>
    <string name="alert_people_in_a_location_traffic_updates_or_heavy_rain">Red - Alert People in a location, Traffic updates, or Heavy Rain</string>
    <string name="post_anonymously">Post Anonymously</string>
    <string name="fabtextone">Create NearBy Post</string>
    <string name="fabtexttwo">Create Interest and Hobby Based Post</string>
    <string name="fabtextthree">Ask for the identification of mysterious objects</string>
    <string name="anonymous">Anonymous</string>
    <string name="logout">Logout</string>
    <string name="updateprofiletitle">Update Profile</string>
</resources>